--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://adorable-longma-b8c626.netlify.app/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 copyright = '2022 Devon Wolfkiel'
